@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-16T08:32:32Z",
+  "timestamp" : "2022-10-16T16:36:25Z",
   "count_outdated" : 560,
   "uniques_outdated" : 359,
-  "count" : 591,
+  "count" : 592,
   "uniques" : 378,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
