@@ -1,3 +1,11 @@
+2022-10-16T16:36:25Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3260161753 # 526
+* notice: last 14d: unq all: 10 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 359 560 / 378 591
+* notice: next accum: outdated-unq outdated-all / unq all: 359 560 / 378 592
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-16]
+
 2022-10-16T08:32:32Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3258830563 # 525
 * notice: last 14d: unq all: 10 31
